Parser/test_cases/bad/multipleletbindings.cl
class Test {
  foo:Test;
  bar():Int {let x:Int,y:string,z:Int in 5};
};
